--- a/movie-review/src/app/app.component.html
+++ b/movie-review/src/app/app.component.html
@@ -1,3 +1,12 @@
+<mat-toolbar color="primary">
+  <button mat-button [matMenuTriggerFor]="loginMenu">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <mat-menu #loginMenu>
+    <button mat-menu-item [routerLink]="['/login']" *ngIf="!userData.getUserId()">Login</button>
+    <button mat-menu-item (click)="logout()" *ngIf="userData.getUserId()">Logout</button>
+  </mat-menu>
+</mat-toolbar>
 <div>
   <router-outlet></router-outlet>
 </div>
