--- a/movie-review/src/app/app.component.html
+++ b/movie-review/src/app/app.component.html
@@ -2,6 +2,9 @@
   <button mat-button [matMenuTriggerFor]="loginMenu">
     <mat-icon>menu</mat-icon>
   </button>
+  <button mat-button class="center" [routerLink]="['']">
+    <mat-icon>home</mat-icon>
+  </button>
   <mat-menu #loginMenu>
     <button mat-menu-item [routerLink]="['/login']" *ngIf="!userData.getUserId()">Login</button>
     <button mat-menu-item (click)="logout()" *ngIf="userData.getUserId()">Logout</button>
