--- a/movie-review/src/app/movie-details/movie-details.component.html
+++ b/movie-review/src/app/movie-details/movie-details.component.html
@@ -1,3 +1,28 @@
-<p>
-  Selected Movie: {{movieId}}
-</p>
+<mat-card>
+  <mat-card-title>{{movieDetails.title}}</mat-card-title>
+  <mat-card-content>
+    <div>
+      {{movieDetails.description}}
+    </div>
+    <h3>
+      Comments:
+    </h3>
+    <mat-card style="margin-top:2%" *ngFor="let comment of movieDetails.comments; index as ci">
+      
+     <mat-card-content><span style="padding-left:2%; margin-right:1%;"><b>{{comment.user.username}}:</b></span>{{comment.comment}}<span><button mat-button >Edit</button></span></mat-card-content>
+     <mat-card-content style="padding-left:3%;">
+      <h4>Raiting:</h4>
+      <div >
+        <p style="text-indent: 80px;" [ngStyle]="{'color':getTextColor(comment)}">{{getRaitingText(comment)}}</p>
+        <app-raiting [comment]="comment"></app-raiting>
+      </div>
+    </mat-card-content>
+    </mat-card>
+  </mat-card-content>
+</mat-card>
+<div style="margin-top: 2%; margin-bottom:10%;">
+  <mat-card style="margin-top:2%" >
+    <mat-card-content><app-raiting *ngIf="AddComment" [addComment]="true" [movieId]="movieId"></app-raiting></mat-card-content>
+  </mat-card>
+</div>
+<button mat-flat-button (click)="addComment()">Add Comment/Review</button>
