--- a/movie-review/src/app/moviereview/moviereview.component.html
+++ b/movie-review/src/app/moviereview/moviereview.component.html
@@ -1,10 +1,17 @@
 <div>
-  <div style="justify-content:center; text-align: center;" class="row">
-    <mat-card *ngFor="let item of movieList" class="column">
-      <mat-card-title><b>Title: </b>{{item.title}}</mat-card-title>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
-      <mat-card-content>Overall Rating {{item.overallrating}}</mat-card-content>
-      <button [routerLink]="['/moviedetails', item.id]">View Details</button>
-    </mat-card>
+  <div>
+    <div style="justify-content:center; text-align: center;" class="row">
+      <mat-grid-list cols="3" id=content>
+        <mat-grid-tile *ngFor="let item of movieList">
+          <mat-card>
+            <mat-card-title id=content><b>Title: </b>{{item.title}}</mat-card-title>
+            <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
+            <mat-card-content>Overall Rating {{item.overallrating}}</mat-card-content>
+            <button [routerLink]="['/moviedetails', item.id]">View Details</button>
+          </mat-card>
+        </mat-grid-tile>
+        
+      </mat-grid-list>
+    </div>
   </div>
 </div>
