--- a/movie-review/src/app/moviereview/moviereview.component.html
+++ b/movie-review/src/app/moviereview/moviereview.component.html
@@ -7,7 +7,7 @@
             <mat-card-title id=content><b>Title: </b>{{item.title}}</mat-card-title>
             <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg">
             <mat-card-content>Overall Rating {{item.overallrating}}</mat-card-content>
-            <button [routerLink]="['/moviedetails', item.id]">View Details</button>
+            <button *ngIf="userData.getUserId()" (click)="passData()" [routerLink]="['/moviedetails', item.id]">View Details</button>
           </mat-card>
         </mat-grid-tile>
         
