updated functions to handle errors

--- a/movie-review/src/app/movie-details/movie-details.component.html
+++ b/movie-review/src/app/movie-details/movie-details.component.html
@@ -19,6 +19,8 @@
       {{movieDetails?.language}}
       <h4>Release Date:</h4>
       {{movieDetails?.releaseDate | date: 'MM-dd-yyyy'}}
+      <h4>Overall Raiting:</h4>
+      {{movieDetails?.overallRaiting}}
     </div>
     <div>
     </div>
