--- a/movie-review/src/app/login/login.component.html
+++ b/movie-review/src/app/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="container" style="justify-content:center; text-align: center;" >
+  <div *ngIf="isInvalidLogin">Invalid login Credentials</div>
   <form [formGroup]="loginRequest" (ngSubmit)="onSubmit(loginRequest.value)">
     <div>
       <h2>Login</h2>
